# Projekt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  init.py  main.py  pyproject.toml  start.py
init-db/: init.sql
src/ffm_dashboard/: app.py  main.py
src/ffm_dashboard/callbacks/: __init__.py  app_callbacks.py  forecast_callbacks.py  home_callbacks.py  sensors_callbacks.py
src/ffm_dashboard/components/: __init__.py  sense_box_api.py
src/ffm_dashboard/db/: __init__.py  db_con.py  sensor_data_db_service.py
src/ffm_dashboard/db/config/: config.yaml
src/ffm_dashboard/db/entity/: sensor_data.py  sensor_metadata.py
src/ffm_dashboard/elements/: __init__.py  header.py  navbar.py
src/ffm_dashboard/forecast/: __init__.py  model_training.py
src/ffm_dashboard/forecast_neu/: __init__.py  forecast.py  model_training.py
src/ffm_dashboard/pages/: forecasts.py  home.py  sensors.py
src/ffm_dashboard/plots/: __init__.py  plot_2d_service.py
src/ffm_dashboard/utils/: __init__.py  dash_helpers.py  sensor_data_validation_model.py
src/hanoi_dashboard/: app.py  main.py
src/hanoi_dashboard/callbacks/: __init__.py  app_callbacks.py  home_callbacks.py  sensors_callbacks.py
src/hanoi_dashboard/components/: __init__.py  sense_box_api.py
src/hanoi_dashboard/data/: __init__.py  db_con.py  sensor_data_db_service.py
src/hanoi_dashboard/db/: __init__.py  db_con.py  sensor_data_db_service.py
src/hanoi_dashboard/elements/: __init__.py  header.py  navbar.py
src/hanoi_dashboard/pages/: forecasts.py  home.py  sensors.py
src/hanoi_dashboard/plots/: 2d_plot_service.py  __init__.py  plot_2d_service.py
src/hanoi_dashboard/utils/: __init__.py  exceptions.py  sensor_data_validation_model.py
(+20 files in other folders)
