[project]
name = "projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "dash>=3.0.2",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandantic>=1.0.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    # "prophet>=1.1.6",
    "psycopg2-binary>=2.9.10",
    "pyaml>=25.1.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    # "statsmodels>=0.14.4",
    # "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
